--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "obspy",
-    "ipython"
+    "obspy>=1.3",
+    "ipython>=8"
 ]
 
 [project.urls]
