--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pickax"
+name = "seismic-pickax"
 version = "0.1.0"
 authors = [
   { name="Philip Crotwell", email="crotwell@seis.sc.edu" },
