--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "seismic-pickax"
-version = "0.2.0"
+version = "0.2.1"  # also in version.py
 authors = [
   { name="Philip Crotwell", email="crotwell@seis.sc.edu" },
 ]
