--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "seismic-pickax"
-version = "0.4-alpha"  # also in version.py
+version = "0.4"  # also in version.py
 authors = [
   { name="Philip Crotwell", email="crotwell@seis.sc.edu" },
 ]
@@ -19,7 +19,7 @@ classifiers = [
     "Topic :: Scientific/Engineering"
 ]
 dependencies = [
-    "obspy>=1.3",
+    "obspy>=1.4",
     "ipython>=8"
 ]
 
