fix version to 0.6.2 and import from project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,6 @@ Issues = "https://github.com/crotwell/pickax/issues"
         ]
 
 [tool.hatch.version]
-    path = "src/pickax/__init__.py"
+    path = "src/pickax/version.py"
 [tool.hatch.build.targets.wheel]
     packages = ["src/pickax"]
